# klee

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  klee  klee_benchmark.py  klee_benchmark_docs.md  refactor.org  run_tests.sh  test.py  testcov_run.py
.github/workflows/: build.yaml
docs/: lazy_initialization.md
ex/: fib-sum-dec.cpp  regexp.cpp  sum_list.cpp
include/: klee-test-comp.c
lib/ADT/: TestCase.cpp  TestCaseUtils.cpp
lib/Core/: AddressSpace.cpp  AddressSpace.h  BackwardSearcher.cpp  BackwardSearcher.h  BaseExecutor.cpp  BaseExecutor.h  BidirectionalExecutor.cpp  BidirectionalExecutor.h  BidirectionalSearcher.cpp  BidirectionalSearcher.h  CMakeLists.txt  Composer.cpp  Composer.h  CoreStats.cpp  CoreStats.h  Database.cpp  Database.h  ExecutionState.cpp  ExecutionState.h  Executor.cpp  Executor.h  ExecutorUtil.cpp  ForwardExecutor.cpp  ForwardSearcher.cpp  ForwardSearcher.h  ImpliedValue.cpp  Initializer.cpp  Initializer.h  Interpreter.cpp  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  MergeHandler.cpp  MergeHandler.h  PForest.cpp  PForest.h  PTree.cpp  PTree.h  Path.cpp  (+21 more)
lib/Core/Executors/: BaseExecutor.cpp  BaseExecutor.h  BidirectionalExecutor.cpp  BidirectionalExecutor.h  ForwardExecutor.cpp  ForwardExecutor.h  GuidedExecutor.cpp  GuidedExecutor.h
lib/Expr/: ArrayCache.cpp  ArrayManager.cpp  Assignment.cpp  CMakeLists.txt  Constraints.cpp  Expr.cpp  ExprPPrinter.cpp  ExprUtil.cpp  ExprVisitor.cpp  Lexer.cpp  Parser.cpp  Updates.cpp
lib/Module/: CMakeLists.txt  CallSplitter.cpp  KInstruction.cpp  KModule.cpp  ModuleUtil.cpp  (+2 more)
(+82 files in other folders)
